added option to hide project navigator when opening an interface file

--- a/DBSmartPanels/Window Controllers/SPPreferencesWindowController.xib
+++ b/DBSmartPanels/Window Controllers/SPPreferencesWindowController.xib
@@ -11,6 +11,7 @@
                 <outlet property="dontHideDebuggerWhileDebuggingWhenTypingBeginsButton" destination="TEQ-FR-xQK" id="AaP-uR-Gvq"/>
                 <outlet property="hideDebuggerWhenOpeningInterfaceFileButton" destination="htl-sW-WIM" id="mXS-Sw-Dpz"/>
                 <outlet property="hideDebuggerWhenTypingBeginsButton" destination="Koz-5r-2o7" id="OoX-xK-uHv"/>
+                <outlet property="hideNavigatorWhenOpeningInterfaceFileButton" destination="mjj-z8-ua8" id="Fjb-GT-tnT"/>
                 <outlet property="hideNavigatorWhenOpeningTextDocumentButton" destination="SKY-fH-t46" id="sEn-xO-877"/>
                 <outlet property="hideNavigatorWhenTypingBeginsButton" destination="8Fx-8r-cbf" id="nxY-IT-jBr"/>
                 <outlet property="hideUtilitiesWhenOpeningTextDocumentButton" destination="FDe-x5-9Jn" id="clD-CZ-ppp"/>
@@ -27,14 +28,14 @@
         <window title="Smart Panels" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" visibleAtLaunch="NO" frameAutosaveName="DBSmartPanelPreferencesWindow" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="480" height="384"/>
+            <rect key="contentRect" x="196" y="240" width="480" height="404"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="384"/>
+                <rect key="frame" x="0.0" y="0.0" width="480" height="404"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Koz-5r-2o7">
-                        <rect key="frame" x="246" y="346" width="116" height="18"/>
+                        <rect key="frame" x="246" y="366" width="116" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide debugger" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="CSJ-ck-3Ec">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -45,7 +46,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TEQ-FR-xQK">
-                        <rect key="frame" x="265" y="326" width="173" height="18"/>
+                        <rect key="frame" x="265" y="346" width="173" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Except while debugging" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="v36-UR-75U">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -56,7 +57,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C13-zT-WpR">
-                        <rect key="frame" x="110" y="347" width="132" height="17"/>
+                        <rect key="frame" x="110" y="367" width="132" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="When typing begins:" id="fk3-pS-3ew">
                             <font key="font" metaFont="system"/>
@@ -65,7 +66,7 @@
                         </textFieldCell>
                     </textField>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R7k-0s-2xl">
-                        <rect key="frame" x="246" y="286" width="101" height="18"/>
+                        <rect key="frame" x="246" y="306" width="101" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide utilities" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Q0P-3j-alh">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -76,7 +77,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pic-kt-XNh">
-                        <rect key="frame" x="246" y="228" width="168" height="18"/>
+                        <rect key="frame" x="246" y="248" width="168" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Restore debugger state" bezelStyle="regularSquare" imagePosition="left" inset="2" id="yzt-fX-7NP">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -87,7 +88,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xiu-aO-pm8">
-                        <rect key="frame" x="36" y="249" width="206" height="17"/>
+                        <rect key="frame" x="36" y="269" width="206" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="When opening a text document:" id="6za-d4-nct">
                             <font key="font" metaFont="system"/>
@@ -96,7 +97,7 @@
                         </textFieldCell>
                     </textField>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FDe-x5-9Jn">
-                        <rect key="frame" x="246" y="188" width="101" height="18"/>
+                        <rect key="frame" x="246" y="208" width="101" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide utilities" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="5YS-w0-21J">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -107,7 +108,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1uI-AF-gcD">
-                        <rect key="frame" x="246" y="248" width="151" height="18"/>
+                        <rect key="frame" x="246" y="268" width="151" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Restore editor mode" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="gFD-Wv-xmC">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -118,7 +119,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="htl-sW-WIM">
-                        <rect key="frame" x="246" y="130" width="116" height="18"/>
+                        <rect key="frame" x="246" y="150" width="116" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide debugger" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="n3y-ut-OV6">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -129,7 +130,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gt4-94-wef">
-                        <rect key="frame" x="41" y="151" width="201" height="17"/>
+                        <rect key="frame" x="41" y="171" width="201" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="When opening an interface file:" id="I4H-9Z-5lQ">
                             <font key="font" metaFont="system"/>
@@ -158,7 +159,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4zx-kO-EQf">
-                        <rect key="frame" x="246" y="150" width="180" height="18"/>
+                        <rect key="frame" x="246" y="170" width="180" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Switch to standard editor" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="PpZ-jb-Cf4">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -191,7 +192,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e42-lB-Smt">
-                        <rect key="frame" x="265" y="110" width="173" height="18"/>
+                        <rect key="frame" x="265" y="130" width="173" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Except while debugging" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="NdF-6p-58G">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -202,7 +203,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Fx-8r-cbf">
-                        <rect key="frame" x="246" y="306" width="157" height="18"/>
+                        <rect key="frame" x="246" y="326" width="157" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide project navigator" bezelStyle="regularSquare" imagePosition="left" inset="2" id="2bR-1A-KpG">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -213,7 +214,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SKY-fH-t46">
-                        <rect key="frame" x="246" y="208" width="157" height="18"/>
+                        <rect key="frame" x="246" y="228" width="157" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide project navigator" bezelStyle="regularSquare" imagePosition="left" inset="2" id="Xb3-rt-adg">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -221,6 +222,17 @@
                         </buttonCell>
                         <connections>
                             <action selector="hideNavigatorWhenOpeningTextDocumentButtonPressed:" target="-2" id="eru-dm-F41"/>
+                        </connections>
+                    </button>
+                    <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mjj-z8-ua8">
+                        <rect key="frame" x="246" y="110" width="157" height="18"/>
+                        <animations/>
+                        <buttonCell key="cell" type="check" title="Hide project navigator" bezelStyle="regularSquare" imagePosition="left" inset="2" id="5WB-mQ-Jwu">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="hideNavigatorWhenOpeningInterfaceFileButtonPressed:" target="-2" id="ZtC-3D-M24"/>
                         </connections>
                     </button>
                 </subviews>
