--- a/DBSmartPanels/Window Controllers/SPPreferencesWindowController.xib
+++ b/DBSmartPanels/Window Controllers/SPPreferencesWindowController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9052" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9052"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SPPreferencesWindowController">
@@ -18,6 +18,7 @@
                 <outlet property="hideUtilitiesWhenTypingBeginsButton" destination="R7k-0s-2xl" id="GIZ-gG-Cxx"/>
                 <outlet property="restoreDebuggerWhenOpeningTextDocumentButton" destination="Pic-kt-XNh" id="PhI-Fh-b0y"/>
                 <outlet property="restoreEditorModeWhenOpeningTextDocumentButton" destination="1uI-AF-gcD" id="S3v-kl-Lby"/>
+                <outlet property="restoreNavigatorCaptionTextField" destination="7Dp-0E-BCd" id="yiM-ZR-3oj"/>
                 <outlet property="showUtilitiesWhenOpeningInterfaceFileButton" destination="BKy-pe-LLf" id="ngM-ks-jBq"/>
                 <outlet property="switchToStandardEditorModeWhenOpeningInterfaceFileButton" destination="4zx-kO-EQf" id="SPf-yb-Cos"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
@@ -28,14 +29,14 @@
         <window title="Smart Panels" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" visibleAtLaunch="NO" frameAutosaveName="DBSmartPanelPreferencesWindow" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="480" height="404"/>
+            <rect key="contentRect" x="196" y="240" width="480" height="444"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="404"/>
+                <rect key="frame" x="0.0" y="0.0" width="480" height="444"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Koz-5r-2o7">
-                        <rect key="frame" x="246" y="366" width="116" height="18"/>
+                        <rect key="frame" x="246" y="406" width="116" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide debugger" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="CSJ-ck-3Ec">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -46,7 +47,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TEQ-FR-xQK">
-                        <rect key="frame" x="265" y="346" width="173" height="18"/>
+                        <rect key="frame" x="265" y="386" width="173" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Except while debugging" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="v36-UR-75U">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -57,7 +58,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C13-zT-WpR">
-                        <rect key="frame" x="110" y="367" width="132" height="17"/>
+                        <rect key="frame" x="110" y="407" width="132" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="When typing begins:" id="fk3-pS-3ew">
                             <font key="font" metaFont="system"/>
@@ -66,7 +67,7 @@
                         </textFieldCell>
                     </textField>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R7k-0s-2xl">
-                        <rect key="frame" x="246" y="306" width="101" height="18"/>
+                        <rect key="frame" x="246" y="346" width="101" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide utilities" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Q0P-3j-alh">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -77,7 +78,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pic-kt-XNh">
-                        <rect key="frame" x="246" y="248" width="168" height="18"/>
+                        <rect key="frame" x="246" y="288" width="168" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Restore debugger state" bezelStyle="regularSquare" imagePosition="left" inset="2" id="yzt-fX-7NP">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -88,7 +89,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xiu-aO-pm8">
-                        <rect key="frame" x="36" y="269" width="206" height="17"/>
+                        <rect key="frame" x="36" y="309" width="206" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="When opening a text document:" id="6za-d4-nct">
                             <font key="font" metaFont="system"/>
@@ -97,7 +98,7 @@
                         </textFieldCell>
                     </textField>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FDe-x5-9Jn">
-                        <rect key="frame" x="246" y="208" width="101" height="18"/>
+                        <rect key="frame" x="246" y="248" width="101" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide utilities" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="5YS-w0-21J">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -108,7 +109,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1uI-AF-gcD">
-                        <rect key="frame" x="246" y="268" width="151" height="18"/>
+                        <rect key="frame" x="246" y="308" width="151" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Restore editor mode" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="gFD-Wv-xmC">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -119,7 +120,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="htl-sW-WIM">
-                        <rect key="frame" x="246" y="150" width="116" height="18"/>
+                        <rect key="frame" x="246" y="190" width="116" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide debugger" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="n3y-ut-OV6">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -130,7 +131,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gt4-94-wef">
-                        <rect key="frame" x="41" y="171" width="201" height="17"/>
+                        <rect key="frame" x="41" y="211" width="201" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="When opening an interface file:" id="I4H-9Z-5lQ">
                             <font key="font" metaFont="system"/>
@@ -139,7 +140,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x6n-2K-wbk">
-                        <rect key="frame" x="187" y="53" width="55" height="17"/>
+                        <rect key="frame" x="187" y="93" width="55" height="17"/>
                         <animations/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Restore:" id="L56-CF-m5j">
                             <font key="font" metaFont="system"/>
@@ -148,7 +149,7 @@
                         </textFieldCell>
                     </textField>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BKy-pe-LLf">
-                        <rect key="frame" x="246" y="90" width="106" height="18"/>
+                        <rect key="frame" x="246" y="130" width="106" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Show utilities" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="77X-G1-v4l">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -159,7 +160,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4zx-kO-EQf">
-                        <rect key="frame" x="246" y="170" width="180" height="18"/>
+                        <rect key="frame" x="246" y="210" width="180" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Switch to standard editor" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="PpZ-jb-Cf4">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -170,7 +171,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ubm-hr-rl7">
-                        <rect key="frame" x="242" y="43" width="187" height="32"/>
+                        <rect key="frame" x="242" y="83" width="187" height="32"/>
                         <animations/>
                         <buttonCell key="cell" type="push" title="Default Plugin Behavior" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="lYA-qr-aQf">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -181,7 +182,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o2r-DE-5h5">
-                        <rect key="frame" x="242" y="13" width="186" height="32"/>
+                        <rect key="frame" x="242" y="53" width="186" height="32"/>
                         <animations/>
                         <buttonCell key="cell" type="push" title="Default Xcode Behavior" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="dL9-cm-4AF">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -192,7 +193,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e42-lB-Smt">
-                        <rect key="frame" x="265" y="130" width="173" height="18"/>
+                        <rect key="frame" x="265" y="170" width="173" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Except while debugging" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="NdF-6p-58G">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -203,7 +204,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Fx-8r-cbf">
-                        <rect key="frame" x="246" y="326" width="157" height="18"/>
+                        <rect key="frame" x="246" y="366" width="157" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide project navigator" bezelStyle="regularSquare" imagePosition="left" inset="2" id="2bR-1A-KpG">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -214,7 +215,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SKY-fH-t46">
-                        <rect key="frame" x="246" y="228" width="157" height="18"/>
+                        <rect key="frame" x="246" y="268" width="157" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide project navigator" bezelStyle="regularSquare" imagePosition="left" inset="2" id="Xb3-rt-adg">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -225,7 +226,7 @@
                         </connections>
                     </button>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mjj-z8-ua8">
-                        <rect key="frame" x="246" y="110" width="157" height="18"/>
+                        <rect key="frame" x="246" y="150" width="157" height="18"/>
                         <animations/>
                         <buttonCell key="cell" type="check" title="Hide project navigator" bezelStyle="regularSquare" imagePosition="left" inset="2" id="5WB-mQ-Jwu">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -235,6 +236,15 @@
                             <action selector="hideNavigatorWhenOpeningInterfaceFileButtonPressed:" target="-2" id="ZtC-3D-M24"/>
                         </connections>
                     </button>
+                    <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Dp-0E-BCd">
+                        <rect key="frame" x="88" y="20" width="304" height="17"/>
+                        <animations/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Use ⌘-1 to display the project navigator." id="3vs-2q-T4w">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
                 <animations/>
             </view>
